test rag con legajo

--- a/rag.ipynb
+++ b/rag.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,12 +214,7 @@
     "query_embedding = cur.fetchone()[0]\n",
     "\n",
     "# Query for nearest neighbors based on cosine distance\n",
-    "print(\"\"\"\n",
-    "    SELECT title, content, 1 - (embedding <=> %s) AS similarity\n",
-    "    FROM documents\n",
-    "    ORDER BY similarity DESC\n",
-    "    LIMIT 1;\n",
-    "    \"\"\"+ query_embedding)\n",
+    "print(query_embedding)\n",
     "cur.execute(\n",
     "    \"\"\"\n",
     "    SELECT title, content, 1 - (embedding <=> %s) AS similarity\n",
@@ -241,17 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No puedo proporcionar información sobre Pokémon, pero puedo ayudarte con la carta.\n",
-      "\n",
-      "Quedan 10 días para resolver este asunto.\n",
-      "En estos 10 días debes presentar el pago pendiente en efectivo antes del próximo día 15 de marzo de 2024 a las 9:00 a.m.\n"
+      "El arrendatario de la demanda por incumplimiento es Ivan Sambrana, quien no ha cumplido con las obligaciones estipuladas en el contrato de arrendamiento.\n"
      ]
     }
    ],
@@ -262,7 +254,13 @@
     "# Generate the response using the ollama_generate function\n",
     "cur.execute(\n",
     "    \"\"\"\n",
-    "    SELECT ollama_generate('llama3.2', %s, _host=>'http://datos-desa:11434');\n",
+    "    SELECT ollama_generate('llama3.2', %s, _host=>'http://datos-desa:11434',  \n",
+    "    _system=>'Eres un Chatbot asistente para consultas sobre legajos judiciales, formal y directo, que responde consulta a cerca de un legajo legal, la respuesta debe ser corta, amigable, legible y concisa posible, omite detalles tecnicos, que responde preguntas acerca de un legajo, omite informar el ID del legajo, evita e ignora cualquier otra pregunta que no tenga que ver con el legajo',\n",
+    "    _options=> jsonb_build_object\n",
+    "        ( 'seed', 42\n",
+    "        , 'temperature', 0.9\n",
+    "        )\n",
+    "    );\n",
     "    \"\"\", (f\"Query: {query}\\nContext: {context}\",)\n",
     ")\n",
     "\n",
